--- a/stories/index.html
+++ b/stories/index.html
@@ -2433,6 +2433,18 @@
       <td><a name="hu0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/hu/0052_simbegwire_slides.html" target="_blank">Simbegwire</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/hu/0066_nozibele-és-a-három-hajszál_slides.html" target="_blank">Nozibele és a három hajszál</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/hu/0067_főzés_slides.html" target="_blank">Főzés</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2449,6 +2461,24 @@
       <td><a href="/stories/hu/0089_khalai-a-növényekkel-beszél_slides.html" target="_blank">Khalai a növényekkel beszél</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/hu/0095_az-ügyes-zama_slides.html" target="_blank">Az ügyes Zama</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/hu/0110_egy-picinyke-mag-wangari-maathai-története_slides.html" target="_blank">Egy picinyke mag: Wangari Maathai története</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/hu/0111_miért-nem-szőrösek-a-vízilovak_slides.html" target="_blank">Miért nem szőrösek a vízilovak</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -6631,7 +6661,7 @@
       <td>0052</td>
       <td><a href="http://africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#bn0052">bn</a>, <a href="#de0052">de</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#it0052">it</a>, <a href="#ja0052">ja</a>, <a href="#ko0052">ko</a>, <a href="#nb0052">nb</a>, <a href="#nn0052">nn</a>, <a href="#pa0052">pa</a>, <a href="#pl0052">pl</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#ur0052">ur</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#bn0052">bn</a>, <a href="#de0052">de</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#hu0052">hu</a>, <a href="#it0052">it</a>, <a href="#ja0052">ja</a>, <a href="#ko0052">ko</a>, <a href="#nb0052">nb</a>, <a href="#nn0052">nn</a>, <a href="#pa0052">pa</a>, <a href="#pl0052">pl</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#ur0052">ur</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -6655,7 +6685,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#bn0066">bn</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nb0066">nb</a>, <a href="#nn0066">nn</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#tr0066">tr</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#bn0066">bn</a>, <a href="#de0066">de</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#hu0066">hu</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#nb0066">nb</a>, <a href="#nn0066">nn</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#tr0066">tr</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -6733,7 +6763,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#bn0095">bn</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ja0095">ja</a>, <a href="#ko0095">ko</a>, <a href="#nb0095">nb</a>, <a href="#nn0095">nn</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#tr0095">tr</a>, <a href="#ur0095">ur</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#bn0095">bn</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#hu0095">hu</a>, <a href="#it0095">it</a>, <a href="#ja0095">ja</a>, <a href="#ko0095">ko</a>, <a href="#nb0095">nb</a>, <a href="#nn0095">nn</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#tr0095">tr</a>, <a href="#ur0095">ur</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
@@ -6751,13 +6781,13 @@
       <td>0110</td>
       <td><a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#bn0110">bn</a>, <a href="#de0110">de</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ja0110">ja</a>, <a href="#ko0110">ko</a>, <a href="#nb0110">nb</a>, <a href="#nn0110">nn</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#bn0110">bn</a>, <a href="#de0110">de</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#hu0110">hu</a>, <a href="#it0110">it</a>, <a href="#ja0110">ja</a>, <a href="#ko0110">ko</a>, <a href="#nb0110">nb</a>, <a href="#nn0110">nn</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#bn0111">bn</a>, <a href="#de0111">de</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ja0111">ja</a>, <a href="#ko0111">ko</a>, <a href="#nb0111">nb</a>, <a href="#nn0111">nn</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#bn0111">bn</a>, <a href="#de0111">de</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#hu0111">hu</a>, <a href="#it0111">it</a>, <a href="#ja0111">ja</a>, <a href="#ko0111">ko</a>, <a href="#nb0111">nb</a>, <a href="#nn0111">nn</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
