--- a/stories/index.html
+++ b/stories/index.html
@@ -2517,6 +2517,12 @@
       <td><a name="hu0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/hu/0201_a-szamárgyermek_slides.html" target="_blank">A szamárgyermek</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/hu/0210_tingi-és-a-tehenek_slides.html" target="_blank">Tingi és a tehenek</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2527,6 +2533,12 @@
       <td><a href="/stories/hu/0231_az-időjárás_slides.html" target="_blank">Az időjárás</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0234</td>
+      <td><a href="/stories/hu/0234_andiswa-a-sztár-focista_slides.html" target="_blank">Andiswa a sztár focista</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -6937,7 +6949,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#bn0201">bn</a>, <a href="#de0201">de</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#nb0201">nb</a>, <a href="#nn0201">nn</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#tr0201">tr</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#bn0201">bn</a>, <a href="#de0201">de</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#hu0201">hu</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#nb0201">nb</a>, <a href="#nn0201">nn</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#tr0201">tr</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -6997,7 +7009,7 @@
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#bn0234">bn</a>, <a href="#de0234">de</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ja0234">ja</a>, <a href="#ko0234">ko</a>, <a href="#nb0234">nb</a>, <a href="#nn0234">nn</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#tr0234">tr</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#bn0234">bn</a>, <a href="#de0234">de</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#hu0234">hu</a>, <a href="#it0234">it</a>, <a href="#ja0234">ja</a>, <a href="#ko0234">ko</a>, <a href="#nb0234">nb</a>, <a href="#nn0234">nn</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#tr0234">tr</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
