--- a/stories/index.html
+++ b/stories/index.html
@@ -3093,6 +3093,12 @@
       <td><a name="ja0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/ja/0262_マゴズヴェ_slides.html" target="_blank">マゴズヴェ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/ja/0271_二つ_slides.html" target="_blank">二つ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -7033,7 +7039,7 @@
       <td>0262</td>
       <td><a href="http://africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0262">ar</a>, <a href="#bn0262">bn</a>, <a href="#de0262">de</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#nb0262">nb</a>, <a href="#nn0262">nn</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#tr0262">tr</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ar0262">ar</a>, <a href="#bn0262">bn</a>, <a href="#de0262">de</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ja0262">ja</a>, <a href="#ko0262">ko</a>, <a href="#nb0262">nb</a>, <a href="#nn0262">nn</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#tr0262">tr</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
