--- a/stories/index.html
+++ b/stories/index.html
@@ -3087,6 +3087,12 @@
       <td><a name="ja0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/ja/0243_おばあさんとのお休み_slides.html" target="_blank">おばあさんとのお休み</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/ja/0253_私の絵本_slides.html" target="_blank">私の絵本</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -7021,7 +7027,7 @@
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#de0243">de</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#nb0243">nb</a>, <a href="#nn0243">nn</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#de0243">de</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ja0243">ja</a>, <a href="#ko0243">ko</a>, <a href="#nb0243">nb</a>, <a href="#nn0243">nn</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
