--- a/stories/index.html
+++ b/stories/index.html
@@ -2451,6 +2451,12 @@
       <td><a name="hu0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/hu/0072_a-mézkalauz-bosszúja_slides.html" target="_blank">A mézkalauz bosszúja</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/hu/0087_szeretnék-olvasni_slides.html" target="_blank">Szeretnék olvasni!</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2539,6 +2545,12 @@
       <td><a href="/stories/hu/0234_andiswa-a-sztár-focista_slides.html" target="_blank">Andiswa a sztár focista</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0243</td>
+      <td><a href="/stories/hu/0243_szünidő-a-nagymamánál_slides.html" target="_blank">Szünidő a nagymamánál</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -6727,7 +6739,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#bn0072">bn</a>, <a href="#de0072">de</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ja0072">ja</a>, <a href="#ko0072">ko</a>, <a href="#nb0072">nb</a>, <a href="#nn0072">nn</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#bn0072">bn</a>, <a href="#de0072">de</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#hu0072">hu</a>, <a href="#it0072">it</a>, <a href="#ja0072">ja</a>, <a href="#ko0072">ko</a>, <a href="#nb0072">nb</a>, <a href="#nn0072">nn</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -7027,7 +7039,7 @@
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#de0243">de</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ja0243">ja</a>, <a href="#ko0243">ko</a>, <a href="#nb0243">nb</a>, <a href="#nn0243">nn</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#de0243">de</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#hu0243">hu</a>, <a href="#it0243">it</a>, <a href="#ja0243">ja</a>, <a href="#ko0243">ko</a>, <a href="#nb0243">nb</a>, <a href="#nn0243">nn</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
