--- a/stories/index.html
+++ b/stories/index.html
@@ -2553,10 +2553,28 @@
       <td><a name="hu0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/hu/0262_magozwe_slides.html" target="_blank">Magozwe</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/hu/0271_kettő_slides.html" target="_blank">Kettő</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/hu/0291_mit-mondott-vusi-nővére_slides.html" target="_blank">Mit mondott Vusi nővére</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/hu/0294_nagymama-banánjai_slides.html" target="_blank">Nagymama banánjai</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -2569,6 +2587,18 @@
       <td><a href="/stories/hu/0302_a-tűz_slides.html" target="_blank">A tűz</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0315</td>
+      <td><a href="/stories/hu/0315_sakima-éneke_slides.html" target="_blank">Sakima éneke</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/hu/0324_a-nap-amikor-elmentem-a-városba_slides.html" target="_blank">A nap, amikor elmentem a városba</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -7057,7 +7087,7 @@
       <td>0262</td>
       <td><a href="http://africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0262">ar</a>, <a href="#bn0262">bn</a>, <a href="#de0262">de</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ja0262">ja</a>, <a href="#ko0262">ko</a>, <a href="#nb0262">nb</a>, <a href="#nn0262">nn</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#tr0262">tr</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ar0262">ar</a>, <a href="#bn0262">bn</a>, <a href="#de0262">de</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#hu0262">hu</a>, <a href="#it0262">it</a>, <a href="#ja0262">ja</a>, <a href="#ko0262">ko</a>, <a href="#nb0262">nb</a>, <a href="#nn0262">nn</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#tr0262">tr</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -7093,7 +7123,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#bn0291">bn</a>, <a href="#de0291">de</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#nb0291">nb</a>, <a href="#nn0291">nn</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#tr0291">tr</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#bn0291">bn</a>, <a href="#de0291">de</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#hu0291">hu</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#nb0291">nb</a>, <a href="#nn0291">nn</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#tr0291">tr</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
@@ -7105,7 +7135,7 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#bn0294">bn</a>, <a href="#de0294">de</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ja0294">ja</a>, <a href="#ko0294">ko</a>, <a href="#nb0294">nb</a>, <a href="#ne0294">ne</a>, <a href="#nn0294">nn</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#tr0294">tr</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#bn0294">bn</a>, <a href="#de0294">de</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#hu0294">hu</a>, <a href="#it0294">it</a>, <a href="#ja0294">ja</a>, <a href="#ko0294">ko</a>, <a href="#nb0294">nb</a>, <a href="#ne0294">ne</a>, <a href="#nn0294">nn</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#tr0294">tr</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -7147,7 +7177,7 @@
       <td>0315</td>
       <td><a href="http://africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#bn0315">bn</a>, <a href="#de0315">de</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ja0315">ja</a>, <a href="#ko0315">ko</a>, <a href="#nb0315">nb</a>, <a href="#nn0315">nn</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#tr0315">tr</a>, <a href="#ur0315">ur</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#bn0315">bn</a>, <a href="#de0315">de</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#hu0315">hu</a>, <a href="#it0315">it</a>, <a href="#ja0315">ja</a>, <a href="#ko0315">ko</a>, <a href="#nb0315">nb</a>, <a href="#nn0315">nn</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#tr0315">tr</a>, <a href="#ur0315">ur</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -7165,7 +7195,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#bn0324">bn</a>, <a href="#de0324">de</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#nb0324">nb</a>, <a href="#nn0324">nn</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#tr0324">tr</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#bn0324">bn</a>, <a href="#de0324">de</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#hu0324">hu</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#nb0324">nb</a>, <a href="#nn0324">nn</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#tr0324">tr</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
